--- a/TopInReddit/Base.lproj/Main.storyboard
+++ b/TopInReddit/Base.lproj/Main.storyboard
@@ -183,6 +183,9 @@
                                             <state key="normal" title="Save">
                                                 <color key="titleColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
+                                            <state key="disabled">
+                                                <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
                                             <connections>
                                                 <action selector="saveButtonTapped:" destination="Q2n-lW-Efa" eventType="touchUpInside" id="0x0-l4-KB1"/>
                                             </connections>
